--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 WIKIMEDIA_STREAM_URL=https://stream.wikimedia.org/v2/stream/recentchange
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 KAFKA_TOPIC_WIKIMEDIA=wikimedia_recentchange
+OPENSEARCH_HOSTS=http://localhost:9200
+OPENSEARCH_INDEX_WIKIMEDIA=wikimedia-recentchange
