--- a/compose.yml
+++ b/compose.yml
@@ -31,3 +31,21 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:19092
     depends_on:
       - kafka
+
+  opensearch:
+    image: opensearchproject/opensearch:2.6.0
+    environment:
+      discovery.type: single-node
+      plugins.security.disabled: "true" # disable https and logins
+      compatibility.override_main_response_version: "true"
+    ports:
+      - 9200:9200
+      - 9600:9600 # required for Performance Analyzer
+
+  opensearch-dashboards:
+    image: opensearchproject/opensearch-dashboards:2.6.0
+    ports:
+      - 5601:5601
+    environment:
+      OPENSEARCH_HOSTS: '["http://opensearch:9200"]'
+      DISABLE_SECURITY_DASHBOARDS_PLUGIN: "true"
